--- a/Fraud Analysis.ipynb
+++ b/Fraud Analysis.ipynb
@@ -956,10 +956,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 0.9989035087719298\n",
+      "2 0.9989035087719298\n",
+      "3 0.9989035087719298\n",
+      "4 0.9989035087719298\n",
+      "5 0.9989035087719298\n",
+      "6 0.9989035087719298\n",
+      "7 0.9956140350877193\n",
+      "8 0.9956140350877193\n",
+      "9 0.9956140350877193\n",
+      "10 0.9956140350877193\n",
+      "11 0.9956140350877193\n",
+      "12 0.9956140350877193\n",
+      "13 0.9945175438596491\n",
+      "14 0.9945175438596491\n",
+      "15 0.9945175438596491\n",
+      "16 0.9945175438596491\n",
+      "17 0.9945175438596491\n",
+      "18 0.9945175438596491\n",
+      "19 0.9945175438596491\n",
+      "20 0.9945175438596491\n",
+      "21 0.9945175438596491\n",
+      "22 0.9945175438596491\n",
+      "23 0.9945175438596491\n",
+      "24 0.9945175438596491\n",
+      "25 0.9945175438596491\n",
+      "26 0.9945175438596491\n",
+      "27 0.9945175438596491\n",
+      "28 0.9945175438596491\n",
+      "29 0.9945175438596491\n",
+      "30 0.9945175438596491\n",
+      "31 0.9945175438596491\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,40):\n",
+    "    knn=KNeighborsClassifier(n_neighbors=i)\n",
+    "    knn.fit(x_train, y_train)\n",
+    "    y_pred=knn.predict(x_test)\n",
+    "    acc_sc=accuracy_score(y_test,y_pred)\n",
+    "    print(i,acc_sc)"
+   ]
   }
  ],
  "metadata": {
