Checking the roc_auc_score

--- a/Fraud Analysis.ipynb
+++ b/Fraud Analysis.ipynb
@@ -965,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1002,7 +1002,15 @@
       "28 0.9945175438596491\n",
       "29 0.9945175438596491\n",
       "30 0.9945175438596491\n",
-      "31 0.9945175438596491\n"
+      "31 0.9945175438596491\n",
+      "32 0.9945175438596491\n",
+      "33 0.993421052631579\n",
+      "34 0.993421052631579\n",
+      "35 0.993421052631579\n",
+      "36 0.993421052631579\n",
+      "37 0.9923245614035088\n",
+      "38 0.9923245614035088\n",
+      "39 0.9923245614035088\n"
      ]
     }
    ],
@@ -1013,6 +1021,103 @@
     "    y_pred=knn.predict(x_test)\n",
     "    acc_sc=accuracy_score(y_test,y_pred)\n",
     "    print(i,acc_sc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "naivebayes=roc_auc_score(y_test, prednaive)\n",
+    "print(naivebayes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9748862913874896\n"
+     ]
+    }
+   ],
+   "source": [
+    "kneigh= roc_auc_score(y_test, y_pred)\n",
+    "print(kneigh)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9782608695652174\n"
+     ]
+    }
+   ],
+   "source": [
+    "decisiontrees= roc_auc_score(y_test, decide)\n",
+    "print(decisiontrees)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5434782608695652\n"
+     ]
+    }
+   ],
+   "source": [
+    "randomforest= roc_auc_score(y_test, g)\n",
+    "print(randomforest)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "logisticReg= roc_auc_score(y_test, predict)\n",
+    "print(logisticReg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It  can be concluded that Decision trees has the greatest AUC score and is the bes"
    ]
   }
  ],
