--- a/Fraud Analysis.ipynb
+++ b/Fraud Analysis.ipynb
@@ -1025,6 +1025,80 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import GradientBoostingClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gradient= GradientBoostingClassifier()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GradientBoostingClassifier(criterion='friedman_mse', init=None,\n",
+       "              learning_rate=0.1, loss='deviance', max_depth=3,\n",
+       "              max_features=None, max_leaf_nodes=None,\n",
+       "              min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "              min_samples_leaf=1, min_samples_split=2,\n",
+       "              min_weight_fraction_leaf=0.0, n_estimators=100,\n",
+       "              n_iter_no_change=None, presort='auto', random_state=None,\n",
+       "              subsample=1.0, tol=0.0001, validation_fraction=0.1,\n",
+       "              verbose=0, warm_start=False)"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gradient.fit(x_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predGBC= gradient.predict(x_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "accGBC= accuracy_score(y_test, predGBC)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(acc, \"%\")\n",
+    "print(\"Classification Report\", classification_report(y_test, predGBC))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 58,
    "metadata": {},
    "outputs": [
@@ -1117,7 +1191,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It  can be concluded that Decision trees has the greatest AUC score and is the bes"
+    "It  can be concluded that Decision trees has the greatest AUC score and is the best classifier for this model\n"
    ]
   }
  ],
